ajustes  no podcast page2, ajustes no homev2

--- a/podcast/episodios.html
+++ b/podcast/episodios.html
@@ -3,17 +3,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EPS</title>
+    <title>DeNilo - Episódios</title>
     <link rel="stylesheet" href="assets/css/style-episodios.css" />
   </head>
   <body>
-    <header>oi</header>
-    <nav>a</nav>
-    <aside>b</aside>
-    <section>c</section>
-  </body>
+    <nav>
+      <ul>
+        <a href="../"><li>Portfólio</li></a>
+        <a href="./index.html"><li>Home</li></a>
+      </ul>
+    </nav>
 
-  <footer>a</footer>
+    <header>
+      <img src="assets/img/LLM.jpg" alt="Foto de capa do episódio um de noss podcast" />
+      <div class="title">
+        <!-- <span>Podcast</span> -->
+        <h1>#001 - Treinamento de IA: LLM</h1>
+        <p>Large Language Models, um exemplo de aprendizagem de IAs que processam e geram linguagem natural com base em grandes volumes de dados. </p>
+      </div>
+    </header>
+
+    <main>
+      <div class="nav-eps">
+        <div class="join-mais">
+          <button>Inscrever-se</button>
+          <img
+            src="assets/img/more_horiz_24dp_EFEFEF_FILL0_wght400_GRAD0_opsz24.svg"
+          />
+        </div>
+        <h3>Descrição EP#001:</h3>
+        <span>Este episódio explora o funcionamento da LLM, desde sua estrutura até seu abastecimento, além de discutir sobre aplicações práticas e o debate sobre o impacto da IA nos empregos.</span>
+        <div class="botoes-tag">
+          <button>4,9 * (15,6mil)</button> •
+          <button>Tecnologia</button>
+          <button>Cultura</button>
+        </div>
+      </div>
+      <div class="content-ep">
+        <iframe
+        src="https://www.youtube.com/embed/LPZh9BOjkQs"
+        title="Large Language Models explained briefly"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+        </iframe>
+      </div>
+
+      <div class="nav-eps audios">
+        <h3>🎧 Ouça o Podcast</h3>
+      </div>
+      <div class="content-ep audios">
+
+        <div class="audio">
+          <h4>🔊 Parte 1</h4>
+          <audio controls>
+            <source src="./assets/audio/part1.mp3" type="audio/mpeg" />
+            Verfique se o navegador suporta audio.
+          </audio>
+        </div>
+
+        <div class="audio">
+          <h4>🔊 Parte 2</h4>
+          <audio controls>
+            <source src="./assets/audio/part2.mp3" type="audio/mpeg" />
+            Verfique se o navegador suporta audio.
+          </audio>
+        </div>
+
+      </div>
+
+
+    </main>
+
+    <footer>
+      <p>© 2025 DeNilo Podcast - thanks for watching</p>
+
+      <p>Desenvolvedores - Danilo de Sena Santos e Nicollas Richard Deluca Maia</p>
+    </footer>
+  </body>
 </html>
 
 <!-- <!DOCTYPE html>
