--- a/podcast/index.html
+++ b/podcast/index.html
@@ -11,7 +11,12 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <ul>
+        <a href="../"><li>Portfólio</li></a>
+        <a href="./episodios.html"><li>Episódios</li></a>
+      </ul>
+    </nav>
 
     <!--           =================================
     ============ CABECALHO - LOGO - TÍTULO  ===================
@@ -49,23 +54,25 @@
       </div>
 
       <section class="episodios">
-        <div class="ep">
-          <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
-          <div class="descricoes">
-            <h3>#001 - TREINAMENTO DE IA: LLM</h3>
-            <div class="icon-text">
-              <span class="material-symbols-outlined"> smart_display </span>
-              <b><p>Vídeo, áudio • DeNilo Podcast</p></b>
-            </div>
-            <b
-              ><span class="resumo"
-                >Neste episódio abordaremos situações práticas muito rentáveis
-                no uso de IAs e como isso afeta nossos empregos.</span
+        <a class="ep" href="episodios.html" style="text-decoration: none">
+          <div class="ep">
+            <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
+            <div class="descricoes">
+              <h3>#001 - TREINAMENTO DE IA: LLM</h3>
+              <div class="icon-text">
+                <span class="material-symbols-outlined"> smart_display </span>
+                <b><p>Vídeo, áudio • DeNilo Podcast</p></b>
+              </div>
+              <b
+                ><span class="resumo"
+                  >Neste episódio abordaremos situações práticas muito rentáveis
+                  no uso de IAs e como isso afeta nossos empregos.</span
+                >
+                <span class="data">Hoje • 0h17m</span></b
               >
-              <span class="data">Hoje • 0h17m</span></b
-            >
+            </div>
           </div>
-        </div>
+        </a>
 
         <div class="ep">
           <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
@@ -103,6 +110,13 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer>
+      <p>© 2025 DeNilo Podcast - thanks for watching</p>
+
+      <p>
+        Desenvolvedores - Danilo de Sena Santos e Nicollas Richard Deluca Maia
+      </p>
+    </footer>
   </body>
 </html>
