--- a/index-temp-home.html
+++ b/index-temp-home.html
@@ -7,26 +7,30 @@
     <link rel="stylesheet" href="css-temp.css" />
   </head>
   <body>
-    <section>
-      <div class="banner-left"></div>
+    <nav>home</nav>
+    <main>
+      <section>
+        <div class="banner-left"></div>
 
-      <div class="middle">
-        <img src="assets/img/bike edit.jpeg" class="profile-image" />
-      </div>
-      <div class="banner-right">
-        <div class="about-me">
-          <h3>Developer</h3>
-          <h1>Nicollas Richard</h1>
-          <span
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-            nesciunt beatae impedit nihil voluptates earum voluptate quis
-            excepturi reprehenderit! Deleniti illo consequatur non nam, vero
-            doloremque ex amet quas est.</span
-          >
+        <div class="middle">
+          <img src="assets/img/bike edit.jpeg" class="profile-image" />
         </div>
-      </div>
-    </section>
+        <div class="banner-right">
+          <div class="about-me">
+            <h3>Developer</h3>
+            <h1>Nicollas Richard</h1>
+            <span
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+              nesciunt beatae impedit nihil voluptates earum voluptate quis
+              excepturi reprehenderit! Deleniti illo consequatur non nam, vero
+              doloremque ex amet quas est.</span
+            >
+          </div>
+        </div>
+      </section>
+    </main>
+    <div class="projects">b</div>
 
-    <section></section>
+    <footer>a</footer>
   </body>
 </html>
