--- a/index-temp-home.html
+++ b/index-temp-home.html
@@ -16,16 +16,35 @@
           <img src="assets/img/bike edit.jpeg" class="profile-image" />
         </div>
         <div class="banner-right">
-          <div class="about-me">
-            <h3>Developer</h3>
-            <h1>Nicollas Richard</h1>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-              nesciunt beatae impedit nihil voluptates earum voluptate quis
-              excepturi reprehenderit! Deleniti illo consequatur non nam, vero
-              doloremque ex amet quas est.</span
-            >
+          <!-- ======================================================
+           --- === C O L U N A S ---
+           --- ========================-->
+
+          <div class="columns">
+            <!-- COLUNA ESQUERDA  -->
+            <div class="column-left">left</div>
+
+            <!-- COLUNA MEIO -->
+            <div class="column-center">
+              <div class="about-me">
+                <h3>Developer</h3>
+                <h1>Nicollas Richard</h1>
+                <span
+                  >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Commodi nesciunt beatae impedit nihil voluptates earum
+                  voluptate quis excepturi reprehenderit! Deleniti illo
+                  consequatur non nam, vero doloremque ex amet quas est.</span
+                >
+              </div>
+            </div>
+
+            <!-- COLUNA DIREITA -->
+            <div class="column-right">right</div>
           </div>
+
+          <!-- =======================
+           --- F I M   C O L U N A S  ---
+           --- ====================================================== -->
         </div>
       </section>
     </main>
