homev2 - estruturas de text , ok

--- a/index-temp-home.html
+++ b/index-temp-home.html
@@ -27,14 +27,18 @@
             <!-- COLUNA MEIO -->
             <div class="column-center">
               <div class="about-me">
-                <h3>Developer</h3>
+                <h3>Software Developer</h3>
                 <h1>Nicollas Richard</h1>
                 <span
                   >Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Commodi nesciunt beatae impedit nihil voluptates earum
                   voluptate quis excepturi reprehenderit! Deleniti illo
-                  consequatur non nam, vero doloremque ex amet quas est.</span
+                  consequatur non nam, .</span
                 >
+                <div class="botoes">
+                  <button class="download">Download CV</button>
+                  <button class="contact">Contact</button>
+                </div>
               </div>
             </div>
 
