estrutura da pagina refeita e aprimorada com Grid e display-flex

--- a/battlefield-table/index.html
+++ b/battlefield-table/index.html
@@ -32,21 +32,28 @@
       </nav>
     </header>
 
-    <div class="banner">
-      <h1>Welcome - Flight</h1>
+    <div class="section-banner">
+      <div class="banner-1">
+        <h1>Welcome - Flight</h1>
+      </div>
     </div>
 
-    <section>
-      <div class="grid">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <section class="videos">
+      <div class="linha-1">
+        <div class="links-yt"></div>
+        <div class="links-yt"></div>
+        <div class="links-yt"></div>
       </div>
 
-      <!-- <h2>Sobre a empresa</h2>
+      <div class="linha-2">
+        <div class="links-yt"></div>
+        <div class="links-yt"></div>
+        <div class="links-yt"></div>
+      </div>
+    </section>
+
+    <div class="services"></div>
+    <!-- <h2>Sobre a empresa</h2>
       <p>
         Battlefield Flight Simulator é uma empresa desenvolvedora de simuladores
         de voo e aeronaves militar, filial de empresa multinacional líder do
@@ -60,7 +67,6 @@
         - Diversos modos de jogo e mapas<br />
         - Personalização de armas e veículos
       </p> -->
-    </section>
 
     <!-- <section>
       <h3>Requisitos de Sistema</h3>
