Acrescentando bootstrap - landing page - testes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="blog/index.html" id="nav4">Blog</a>
         <a href="card/index.html" id="nav5">CARD</a> 
         <a href="baralho/index.html" id="nav6">Baralho</a>
+        <a href="landing-page/index.html">Landing page - bootstrap</a>
         <a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank" id="nav7">Meu LinkedIn</a>
     </nav>
 
