--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="row align-items-center text-center">
           <div class="col">
-            <h1 class="display-4">Bem-vindo à Nossa Página</h1>
+            <h1 class="display-4">Welcome Viajante</h1>
             <p class="lead">
               Oferecemos soluções incríveis para o seu negócio.
             </p>
@@ -54,10 +54,8 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="border rounded p-4 h-100 shadow-sm">
-              <h5 class="fw-semibold">Marketing Digital</h5>
-              <p>
-                Alcance mais pessoas com campanhas estratégicas e criativas.
-              </p>
+              <h5 class="fw-semibold">Infraestrutura de TI</h5>
+              <p>Garantimos eficiencia e performance para o seu negócio.</p>
             </div>
           </div>
         </div>
@@ -68,9 +66,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <p class="mb-0">
-              &copy; 2025 Minha Empresa. Todos os direitos reservados.
-            </p>
+            <p class="mb-0">&copy; 2025 Nicollas...</p>
           </div>
         </div>
       </div>
