aplicando bootstrap na home( testes do framework, o modelo final será totalemnte alterado)

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -28,6 +28,7 @@
 
     <section id="servicos" class="py-5">
       <div class="container">
+        <a href="../index.html"><p>&lt;&lt; BACK</p></a>
         <div class="row text-center mb-4">
           <div class="col">
             <h2 class="fw-bold">Nossos Serviços</h2>
