--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Landing Page Simples</title>
+    <title>bootstrap</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -62,6 +62,65 @@
         </div>
       </div>
     </section>
+
+
+    <!-- ----------------------------- -->
+    <!-- TABELA DOS FUNCIONARIOS -->
+    <!-- ----------------------------- -->
+
+    <div class="container">
+      <h1 class="mb-4 text-center">Lista de Usuários</h1>
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered table-hover">
+              <thead class="thead-light">
+                <tr>
+                  <th>ID</th>
+                  <th>Nome</th>
+                  <th>Email</th>
+                  <th>Cargo</th>
+                  <th>Ações</th>
+                </tr>
+              </thead>
+              <tbody class="table-group-divider">
+                <tr>
+                  <td>1</td>
+                  <td>Carlos</td>
+                  <td>carlos@hotmail.com</td>
+                  <td>Engenehiro de dados</td>
+                  <td>
+                    <button class="btn btn-sm btn-primary">Visualizar</button>
+                    <button class="btn btn-sm btn-warning">Editar</button>
+                    <button class="btn btn-sm btn-danger">Deletar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>nicollas</td>
+                  <td>nick@gmail.com</td>
+                  <td>Desenvolvedor</td>
+                  <td>
+                    <button class="btn btn-sm btn-primary">Visualizar</button>
+                    <button class="btn btn-sm btn-warning">Editar</button>
+                    <button class="btn btn-sm btn-danger">Deletar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>Ricahrd</td>
+                  <td>rich@gmail.com</td>
+                  <td>Tech Lead</td>
+                  <td>
+                    <button class="btn btn-sm btn-primary">Visualizar</button>
+                    <button class="btn btn-sm btn-warning">Editar</button>
+                    <button class="btn btn-sm btn-danger">Deletar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </body>
+    </html>
 
     <footer class="bg-dark text-white py-4">
       <div class="container">
