--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,7 +18,7 @@
             <p class="lead">
               Oferecemos soluções incríveis para o seu negócio.
             </p>
-            <a href="#servicos" class="btn btn-primary"
+            <a href="#" class="btn btn-primary"
               >Conheça nossos serviços</a
             >
           </div>
@@ -28,7 +28,12 @@
 
     <section id="servicos" class="py-5">
       <div class="container">
-        <a href="../index.html"><p>&lt;&lt; BACK</p></a>
+        <a class="icon-link" href="../index.html">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+          </svg>
+          BACK
+        </a>
         <div class="row text-center mb-4">
           <div class="col">
             <h2 class="fw-bold">Nossos Serviços</h2>
