--- a/index-temp-home.html
+++ b/index-temp-home.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-  </nav>
+    </nav>
     <main>
       <section>
         <div class="banner-left"></div>
@@ -65,7 +65,7 @@
 
           <div class="columns">
             <!-- COLUNA ESQUERDA  -->
-            <div class="column-left">left</div>
+            <div class="column-left"></div>
 
             <!-- COLUNA DO NOME E SOBRE -->
             <div class="column-center">
@@ -111,7 +111,7 @@
           <!-- Projeto 2 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="#" class="card-img-top" alt="Projeto 2">
+              <img src="assets/img/Untitled.png" class="card-img-top" alt="Projeto 2">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">Battlefield Fly Simulator</h5>
                 <p class="card-text">Pagina da empresa que faz software simulador de voo</p>
@@ -123,7 +123,7 @@
           <!-- Projeto 3 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="#" class="card-img-top" alt="Projeto 3">
+              <img src="assets/img/podcastt.png" class="card-img-top" alt="Projeto 3">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">DeNilo - Podcast</h5>
                 <p class="card-text">Pagina do Podcast contendo episódio gravado</p>
@@ -135,7 +135,7 @@
           <!-- Projeto 4 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="#" class="card-img-top" alt="Projeto 4">
+              <img src="assets/img/blog.png" class="card-img-top" alt="Projeto 4">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">Blog - POO</h5>
                 <p class="card-text">Blog que fala sobre Programaçao Orientada a Objetos .</p>
