aplicação de bootstrap no card, e atualização da pagina home

--- a/card/index.html
+++ b/card/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/card.css" />
+    <title>Nicollas Richard</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="card">
-      <img src="assets/foto.jfif" />
+      <img src="img/foto.jfif" alt="Foto perfil" />
       <h1>Nicollas Richard</h1>
-      <p>Alpar Rocket - Fatec-JD - FrontEnd</p>
-      <span>Follow me!</span>
+      <p>Software Developer | Alpar Rocket • Fatec-JD</p>
+      <span>Me acompanhe nas redes</span>
       <div class="links">
-        <a href="https://github.com/Voyager83" target="_blank">GitHub</a>
-        <a
-          href="https://www.linkedin.com/in/nicollas-deluca-148643110/"
-          target="_blank"
-          >LinkedIn</a
-        >
+        <a href="https://github.com/Voyager83" target="_blank"> <img src="img/github.png"/>GitHub</a> 
+        
+        <a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank"><img src="img/linkedin.png"/> LinkedIn</a>
       </div>
     </div>
   </body>
