aplicações na cafeteria

--- a/cafeteria/index.html
+++ b/cafeteria/index.html
@@ -229,6 +229,45 @@
             </div>
         </div>
     </section>
+
+    <h2>Horário de Funcionamento</h2>
+    <div class="table-container">
+      <table class="table table-bordered text-center align-middle">
+        <thead>
+          <tr>
+            <th>Horários</th>
+            <th>Segunda</th>
+            <th>Terça</th>
+            <th>Quarta</th>
+            <th>Quinta</th>
+            <th>Sexta</th>
+            <th>Sábado</th>
+            <th>Dom. & Feriados</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Manhã</td>
+            <td>08:00 - 12:00</td>
+            <td>Fechado</td>
+            <td>08:00 - 12:00</td>
+            <td>08:00 - 12:00</td>
+            <td>08:00 - 12:00</td>
+            <td>08:00 - 12:00</td>
+            <td rowspan="2">08:00 - 20:00</td>
+          </tr>
+          <tr>
+            <td>Tarde</td>
+            <td>14:00 - 18:00</td>
+            <td>Fechado</td>
+            <td>08:00 - 12:00</td>
+            <td>08:00 - 12:00</td>
+            <td>08:00 - 12:00</td>
+            <td>08:00 - 12:00</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   
 
       <footer class="bg-dark text-white py-4 mt-5">
