--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <div class="navbar bg-body-tertiary fixed-top">
+      <div class="navbar  ">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Voltar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -51,6 +51,8 @@
         </div>
       </div>
     </nav>
+
+    <!-- IMAGEM, DESCRIÇÃO E BANNER -->
     <main>
       <section>
         <div class="banner-left"></div>
@@ -171,7 +173,7 @@
           <!-- Projeto 7 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="#" class="card-img-top" alt="Projeto 7">
+              <img src="assets/img/landing-page.png" class="card-img-top" alt="Projeto 7">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">landing page</h5>
                 <p class="card-text">Pagina feita totalmente aplicando bootstrap para estudos</p>
