--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
               </div>
             </div>
           </div>
+
+          <!-- Projeto 8 -->
+          <div class="col-12 col-sm-6 col-lg-4">
+            <div class="card bg-dark text-white h-100">
+              <img src="assets/img/angularcute.png" class="card-img-top" alt="Projeto 7">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title ">Sistema Escola - AngularJS</h5>
+                <p class="card-text">Pagina feita com AngularJS para estudos</p>
+                <a href="gerenciamento-usuarios-escola/index.html" class="btn btn-success mt-auto">Ver Projeto</a>
+              </div>
+            </div>
+          </div>
     
         </div>
       </div>
