subindo atividades restantes com telas, falta finalizar previsao do tempo

--- a/index.html
+++ b/index.html
@@ -193,8 +193,40 @@
               </div>
             </div>
           </div>
-    
-        </div>
+
+          <!-- Projeto 9 -->
+          <div class="col-12 col-sm-6 col-lg-4">
+            <div class="card bg-dark text-white h-100">
+              <img src="assets/img/luzes.png" class="card-img-top" alt="Projeto 7">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title ">Automação de Luzes</h5>
+                <p class="card-text">Pagina feita com JS para estudos</p>
+                <a href="automacao-luzes/index.html" class="btn btn-success mt-auto">Ver Projeto</a>
+              </div>
+            </div>
+          </div>
+          <!-- Projeto 10 -->
+          <div class="col-12 col-sm-6 col-lg-4">
+            <div class="card bg-dark text-white h-100">
+              <img src="#" class="card-img-top" alt="Projeto 7">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title ">Sistema Escolar</h5>
+                <p class="card-text">Pagina feita com JS para estudos</p>
+                <a href="sistema-escolar/index.html" class="btn btn-success mt-auto">Ver Projeto</a>
+              </div>
+            </div>
+          </div>
+          <!-- Projeto 11 -->
+          <div class="col-12 col-sm-6 col-lg-4">
+            <div class="card bg-dark text-white h-100">
+              <img src="#" class="card-img-top" alt="Projeto 7">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title ">Validação com Regex</h5>
+                <p class="card-text">Pagina feita com JS para estudos</p>
+                <a href="validacao-regex/index.html" class="btn btn-success mt-auto">Ver Projeto</a>
+              </div>
+            </div>      
+
       </div>
     </section>
     
