--- a/index.html
+++ b/index.html
@@ -226,8 +226,17 @@
                 <a href="validacao-regex/index.html" class="btn btn-success mt-auto">Ver Projeto</a>
               </div>
             </div>      
-
-      </div>
+          </div>
+          <!-- Projeto 12 -->
+          <div class="col-12 col-sm-6 col-lg-4">
+            <div class="card bg-dark text-white h-100">
+              <img src="#" class="card-img-top" alt="Projeto 7">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title ">Clima com AngularJS</h5>
+                <p class="card-text">Clima com API e AngularJS</p>
+                <a href="previsao-angular/index.html" class="btn btn-success mt-auto">Ver Projeto</a>
+              </div>
+            </div>
     </section>
     
       
