--- a/battlefield-table/index.html
+++ b/battlefield-table/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battlefield Flight Simulator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="assets/style.css" />
   </head>
@@ -36,73 +41,81 @@
 
     <div class="section-banner">
       <div class="banner-1">
-
         <h1 class="display-4">Welcome - FLy</h1>
-        
       </div>
     </div>
 
     <section class="videos">
       <div class="linha-1">
-        <div class="links-yt"></div>
-        <div class="links-yt"></div>
-        <div class="links-yt"></div>
+        <div class="links-yt">
+          <div class="card-content">
+            <h3>MFCD Builder</h3>
+            <a href="https://youtu.be/seu-video" target="_blank">
+              <button>Veja a Demo</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="links-yt">
+          <div class="card-content">
+            <h3>MFCD Builder</h3>
+            <a href="https://youtu.be/seu-video" target="_blank">
+              <button>Veja a Demo</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="links-yt">
+          <div class="card-content">
+            <h3>MFCD Builder</h3>
+            <a href="https://youtu.be/seu-video" target="_blank">
+              <button>Veja a Demo</button>
+            </a>
+          </div>
+        </div>
       </div>
 
       <div class="linha-2">
-        <div class="links-yt"></div>
-        <div class="links-yt"></div>
-        <div class="links-yt"></div>
+        <div class="links-yt">
+          <div class="card-content">
+            <h3>MFCD Builder</h3>
+            <a href="https://youtu.be/seu-video" target="_blank">
+              <button>Veja a Demo</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="links-yt">
+          <div class="card-content">
+            <h3>MFCD Builder</h3>
+            <a href="https://youtu.be/seu-video" target="_blank">
+              <button>Veja a Demo</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="links-yt">
+          <div class="card-content">
+            <h3>MFCD Builder</h3>
+            <a href="https://youtu.be/seu-video" target="_blank">
+              <button>Veja a Demo</button>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
     <div class="services"></div>
-    <!-- <h2>Sobre a empresa</h2>
-      <p>
-        Battlefield Flight Simulator é uma empresa desenvolvedora de simuladores
-        de voo e aeronaves militar, filial de empresa multinacional líder do
-        segmento de simuladores
-      </p>
-
-      <h2>Características</h2>
-      <p>
-        - Combate multijogador em grande escala<br />
-        - Gráficos de última geração(ou quase..rs)<br />
-        - Diversos modos de jogo e mapas<br />
-        - Personalização de armas e veículos
-      </p> -->
-
-    <!-- <section>
-      <h3>Requisitos de Sistema</h3>
-
-      <h4>Requisitos mínimos para Windows</h4>
-
-      <h4>Requisitos recomendados para Windows</h4>
-
-      <table border="2">
-        <thead>
-          <th><b>SO</b></th>
-          <th><b>Processador</b></th>
-          <th><b>Memória</b></th>
-          <th><b>Armazenamento</b></th>
-          <th><b>Placa de vídeo (AMD)</b></th>
-          <th><b>Placa de vídeo (NVIDIA)</b></th>
-        </thead>
-        <tbody>
-          <td>Windows 7 64 bits, se vc estiver em 2025, windows 10</td>
-          <td>CPU de quatro núcleos</td>
-          <td>4GB DDR3</td>
-          <td>20 GB</td>
-          <td>Radeon 6950</td>
-          <td>GeForce GTX 560</td>
-        </tbody>
-      </table>
-    </section> -->
+   
 
     <footer>
       <p>&copy; 2025₢ Battlefield.</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
