acrescentei um video para teste

--- a/battlefield-table/index.html
+++ b/battlefield-table/index.html
@@ -49,10 +49,17 @@
       <div class="linha-1">
         <div class="links-yt">
           <div class="card-content">
-            <h3>MFCD Builder</h3>
-            <a href="https://youtu.be/seu-video" target="_blank">
-              <button>Veja a Demo</button>
-            </a>
+            <!-- <h3>MFCD Builder</h3> -->
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.youtube.com/embed/ecCu9zsNWEM"
+              title="MFCDBuilder - Construindo o Indicador de Pressão de Óleo (F16/A) - demo vídeo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
 
@@ -106,7 +113,6 @@
     </section>
 
     <div class="services"></div>
-   
 
     <footer>
       <p>&copy; 2025₢ Battlefield.</p>
