acrescentando imagens na home e pagina de previsao

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <!-- Projeto 8 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="assets/img/angularcute.png" class="card-img-top" alt="Projeto 7">
+              <img src="assets/img/gerenciamento-angular.png" class="card-img-top" alt="Projeto 8">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">Sistema Escola - AngularJS</h5>
                 <p class="card-text">Pagina feita com AngularJS para estudos</p>
@@ -197,7 +197,7 @@
           <!-- Projeto 9 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="assets/img/luzes.png" class="card-img-top" alt="Projeto 7">
+              <img src="assets/img/luzes.png" class="card-img-top" alt="Projeto 9">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">Automação de Luzes</h5>
                 <p class="card-text">Pagina feita com JS para estudos</p>
@@ -208,7 +208,7 @@
           <!-- Projeto 10 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="#" class="card-img-top" alt="Projeto 7">
+              <img src="assets/img/angularcute.png" class="card-img-top" alt="Projeto 10">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">Sistema Escolar</h5>
                 <p class="card-text">Pagina feita com JS para estudos</p>
@@ -219,7 +219,7 @@
           <!-- Projeto 11 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="#" class="card-img-top" alt="Projeto 7">
+              <img src="assets/img/regex.png" class="card-img-top" alt="Projeto 11">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">Validação com Regex</h5>
                 <p class="card-text">Pagina feita com JS para estudos</p>
@@ -230,7 +230,7 @@
           <!-- Projeto 12 -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="card bg-dark text-white h-100">
-              <img src="#" class="card-img-top" alt="Projeto 7">
+              <img src="assets/img/previsao.png" class="card-img-top" alt="Projeto 12">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title ">Clima com AngularJS</h5>
                 <p class="card-text">Clima com API e AngularJS</p>
